Another FE fixes description and company is now not required, fixed not refreshing calendar, fixed not refreshing events, changed icons of active checkbox for events, shifted add buttons to the right side of card, ICO is now not required for create of new company (name is now required), tweaked responsivness of graph

--- a/frontend/src/Components/CompanyDetails/css/Orders.css
+++ b/frontend/src/Components/CompanyDetails/css/Orders.css
@@ -78,3 +78,9 @@
 .datePickerOrder .MuiSvgIcon-root {
     fill: #109CF1 !important;
 }
+
+.company-details-orders .card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
